@@ -141,7 +141,9 @@ o svscan: ability to run as PID 1 and reap dead children
     state of certificate
 60. docker-entrypoint: added hotfix for podman named pipe bug
 - 18/08/2021
-61. docker-entrypoint: remvoed timedatectl as it doesn't work without systemd
+61. docker-entrypoint: removed timedatectl as it doesn't work without systemd
+- 20/08/2021
+62. docker-entrypoint: removed host compoment from default domain
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
